# SeisWork_

./: .dockerignore  .gitignore  CHANGELOG.json  LICENSE  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt  seiswork.py  uninstall.sh  update.sh
config/: config.yaml  ttdb.txt
config/nlloc_grids/global/: iasp91.P.AAI.angle.hdr  iasp91.P.AAII.angle.buf  iasp91.P.AAII.angle.hdr  iasp91.P.AAII.time.buf  iasp91.P.AMPM.angle.buf  iasp91.P.AMPM.time.buf  iasp91.P.BB01.angle.buf  iasp91.P.BB01.angle.hdr  iasp91.P.BB01.time.buf  iasp91.P.BB02.angle.buf  iasp91.P.BB02.time.buf  iasp91.P.BB03.angle.buf  iasp91.P.BB03.angle.hdr  iasp91.P.BB03.time.buf  iasp91.P.BB03.time.hdr  iasp91.P.BB04.time.buf  iasp91.P.BB05.angle.buf  iasp91.P.BB05.angle.hdr  iasp91.P.BB06.angle.buf  iasp91.P.BGCI.angle.hdr  iasp91.P.BGCI.time.buf  iasp91.P.BSMI.angle.buf  iasp91.P.BSMI.time.buf  iasp91.P.BSMI.time.hdr  iasp91.P.FAKI.angle.hdr  iasp91.P.GHMI.angle.buf  iasp91.P.GHMI.angle.hdr  iasp91.P.GHMI.time.buf  iasp91.P.GHMI.time.hdr  iasp91.P.GLMI.time.buf  iasp91.P.GTOI.angle.buf  (+374 more)
docker/: Dockerfile.corebin  build_corebin.sh  corebin-build-inside.sh  corebin-entrypoint.sh
docker/phasenet/: Dockerfile
docs/: generate_flowmap.py  generate_full_doc.py  generate_mindmap.py  generate_online_doc.py
seiswork/: __init__.py  cli.py  client.py  parallel.py
seiswork-agent/: agent.py  install_agent.sh
seiswork/modules/: __init__.py
seiswork/utils/: __init__.py  catalog_filter.py  channels.py  converter.py  mseedlite.py  plotter.py  response_fix.py  sds_lite.py  slinktool_verify.py
seiswork/web/: __init__.py  _benchmark.py  _crosscorr.py  _denoise_runner.py  _full_pipeline.py  _online_hypodd.py  _online_stations.py  _pick_runner.py  _pipeline_runner.py  _presentation.py  _realtime_pipeline.py  _residual.py  _seedlink_live.py  _seiscomp_detect.py  _slab.py  app.py  wsgi.py
tools/: setup_gunicorn_nginx.sh  web_service.sh
(+76 files in other folders)
